# getopt-win

./: .gitignore  CMakeLists.txt  LICENSE  README.md  getopt-win-config.cmake.in
